--- a/template/website/index.html
+++ b/template/website/index.html
@@ -1,131 +1,101 @@
 
+{% extends 'website/parent.html' %}
 
-<html>
-    <head>
-        {% load static %}
-        <link type="text/css" rel="stylesheet" href="{% static 'website/css/custom.css' %}"  media="screen,projection"/>
-        <link type="text/css" rel="stylesheet" href="{% static 'website/css/materialize.min.css' %}"  media="screen,projection"/>
+{% block title%} صفحه اصلی  {% endblock %}
 
-</head>
-    <body class="green darken-1">
-            <nav>
-                    <div class="nav-wrapper green darken-2">
-                      <a href="#" class="brand-logo">Logo</a>
-                      <ul id="nav-mobile" class="right ">
-                        
-                        
-                        <li><a href="collapsible.html">ارتباط با ما</a></li>
-                        <li><a href="badges.html">درباره ما</a></li>
-                        <li><a href="sass.html">صفحه اصلی</a></li>
-                      </ul>
-                    </div>
-            </nav>
-            
-            <div dir="rtl">
-                    
-                    
-                            <div class="row">
-                                    <div class="col s12 m7">
-                                                <table class=" match-table "> 
-                                                        
-                                                                <tbody>
-                                                                          <tr class="green darken-3 hoverable">
-                                                                            <td><img class="team-image" src="http://moderndata.ir/logos/chelsea_logo.png"  /></td>
-                                                                            <td class="text-color">چلسی</td>
-                                                                            <td class="text-color">-</td>
-                                                                            <td class="text-color">لیورپول</td>
-                                                                            <td><img class="team-image"  src="http://moderndata.ir/logos/liverpool_logo.png" /></td>
-                                                                            <td><span class="label orange darken-2">۱۳۹۷/۰۱/۲۸ ۲۳:۴۵</span></td>
-                                                                        </tr>
-                                                                        <tr class="green darken-2 hoverable">
-                                                                                        <td><img class="team-image" src="http://moderndata.ir/logos/chelsea_logo.png"  /></td>
-                                                                                        <td class="text-color">چلسی</td>
-                                                                                        <td class="text-color">-</td>
-                                                                                        <td class="text-color">لیورپول</td>
-                                                                                        <td><img class="team-image"  src="http://moderndata.ir/logos/liverpool_logo.png" /></td>
-                                                                                        <td><span class="label orange darken-2">۱۳۹۷/۰۱/۲۸ ۲۳:۴۵</span></td>
-                                                                                    </tr> 
-                                                                                    <tr class="green darken-3 hoverable">
-                                                                                                <td><img class="team-image" src="http://moderndata.ir/logos/chelsea_logo.png"  /></td>
-                                                                                                <td class="text-color">چلسی</td>
-                                                                                                <td class="text-color">-</td>
-                                                                                                <td class="text-color">لیورپول</td>
-                                                                                                <td><img class="team-image"  src="http://moderndata.ir/logos/liverpool_logo.png" /></td>
-                                                                                                <td><span class="label orange darken-2">۱۳۹۷/۰۱/۲۸ ۲۳:۴۵</span></td>
-                                                                                            </tr>
-                        
-                                                                                            <tr class="green darken-2 hoverable">
-                                                                                                        <td><img class="team-image" src="http://moderndata.ir/logos/chelsea_logo.png"  /></td>
-                                                                                                        <td class="text-color">چلسی</td>
-                                                                                                        <td class="text-color">-</td>
-                                                                                                        <td class="text-color">لیورپول</td>
-                                                                                                        <td><img class="team-image"  src="http://moderndata.ir/logos/liverpool_logo.png" /></td>
-                                                                                                        <td><span class="label orange darken-2">۱۳۹۷/۰۱/۲۸ ۲۳:۴۵</span></td>
-                                                                                                    </tr>                            
-                                                                        </tbody>
-                                                                      </table>   
-                                    </div>
-                                    <div class="col s12 m5">
-                                                <table class=" match-table centered">
-                                                                <thead>
-                                                                                <tr>
-                                                                                    <th class="text-color">رتبه</th>
-                                                                                    <th class="text-color" colspan="2"> تیم</th>
-                                                                                    <th class="text-color">تعداد بازی</th>
-                                                                                    <th class="text-color">امتیاز</th>
-                                                                                </tr>
-                                                                              </thead>
-                                                                <tbody>
-                                                                          <tr class="green darken-3">
-                                                                            <td class="text-color">1-</td>
-                                                                            <td colspan="2"  class="text-color"><img class="team-image"  src="http://moderndata.ir/logos/liverpool_logo.png" ><span>لیورپول</span></td>
-                                                                            
-                                                                            <td class="text-color">8</td>
-                                                                            <td class="text-color">24</td>
-                                                                        </tr>
-                                                                        <tr class="green darken-2">
-                                                                                        <td class="text-color">1-</td>
-                                                                                        <td colspan="2"  class="text-color"><img class="team-image"  src="http://moderndata.ir/logos/liverpool_logo.png" ><span>لیورپول</span></td>
-                                                                                        
-                                                                                        <td class="text-color">8</td>
-                                                                                        <td class="text-color">24</td>
-                                                                                    </tr>     
-                                                                                    <tr class="green darken-3">
-                                                                                                <td class="text-color">1-</td>
-                                                                                                <td colspan="2"  class="text-color"><img class="team-image"  src="http://moderndata.ir/logos/liverpool_logo.png" ><span>لیورپول</span></td>
-                                                                                                
-                                                                                                <td class="text-color">8</td>
-                                                                                                <td class="text-color">24</td>
-                                                                                            </tr>     
-                                                                                            <tr class="green darken-3">
-                                                                                                        <td class="text-color">1-</td>
-                                                                                                        <td colspan="2"  class="text-color"><img class="team-image"  src="http://moderndata.ir/logos/liverpool_logo.png" ><span>لیورپول</span></td>
-                                                                                                        
-                                                                                                        <td class="text-color">8</td>
-                                                                                                        <td class="text-color">24</td>
-                                                                                                    </tr>                         
-                                                                                                 
-                                                                </tbody>
-                                        </table>   
-                                    </div>
-                            </div>
-                                
-                        </div>
-                    
-        
-                      
-        
-            
-                
+{% block crumb %}
+خانه
+{% endblock %}
 
-            
-    </body>
+{% block content %}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<div class="row">
+
+
+    <div class="col-6 col-lg-3">
+        <div class="card">
+            <div class="card-body p-0 clearfix">
+                <i class="fa fa-gamepad bg-primary p-4 px-5 font-2xl mr-3 float-right"></i>
+                <div class="h5 text-primary mb-0 pt-3">8</div>
+                <div class="text-muted text-uppercase font-weight-bold font-xs">لیگ های فعال</div>
+            </div>
+        </div>
+    </div>
     
-    <script type="text/javascript" src="{% static 'website/js/materialize.min.js' %}"></script>
 
-    <script>
+    <div class="col-6 col-lg-3">
+        <div class="card">
+            <div class="card-body p-0 clearfix">
+                <i class="fa fa-soccer-ball-o bg-info p-4 px-5 font-2xl mr-3 float-right"></i>
+                <div class="h5 text-info mb-0 pt-3">80</div>
+                <div class="text-muted text-uppercase font-weight-bold font-xs">مجموع تیم ها</div>
+            </div>
+        </div>
+    </div>
+    <!--/.col-->
 
-    </script>
-    </html>
+    <div class="col-6 col-lg-3">
+        <div class="card">
+            <div class="card-body p-0 clearfix">
+                <i class="fa fa-users bg-warning p-4 px-5 font-2xl mr-3 float-right"></i>
+                <div class="h5 text-warning mb-0 pt-3">480</div>
+                <div class="text-muted text-uppercase font-weight-bold font-xs">مجموع کاربران</div>
+            </div>
+        </div>
+    </div>
+    <!--/.col-->
+
+    <div class="col-6 col-lg-3">
+        <div class="card">
+            <div class="card-body p-0 clearfix">
+                <i class="fa fa-video-camera  bg-danger p-4 px-5 font-2xl mr-3 float-right"></i>
+                <div class="h5 text-danger mb-0 pt-3">88</div>
+                <div class="text-muted text-uppercase font-weight-bold font-xs">مجموع ویدئوها</div>
+            </div>
+        </div>
+    </div>
+    <!--/.col-->
+</div>
+<!--/.row-->
+
+
+
+
+
+ <div class="card">
+     <div class="card-body">
+         <div class="row">
+             <div class="col-sm-5">
+                 <h4 class="card-title mb-0" id="title"> </h4>
+                 
+             </div>
+             
+         </div>
+         <!--/.row-->
+         <div class="chart-wrapper" style="height:600px;margin-top:40px;">
+                 
+         </div>
+     </div>
+     <div class="card-footer" dir="ltr">
+            <ul>
+                    <li>
+                            <button  type="button" class="btn btn-outline-primary"><i class="fa fa-play"></i>&nbsp; اجرای کد</button>
+                    </li>
+                    <li>
+                            <button  type="button" class="btn btn-outline-success"><i class="fa fa-save"></i>&nbsp; ذخیره تغییرات</button>
+                    </li>
+                </ul>
+     </div>
+ </div>
+ <!--/.card-->
+
+ <!--/.row-->
+</div>
+
+
+
+
+{% endblock %}
+
+
+       
